[package]
name = "py27-marshal"
version = "0.4.0"
authors = ["Solomon Ucko <solly.ucko@gmail.com>", "Lander Brandt <lander.griffith+cratesio@gmail.com>"]
edition = "2018"
description = "A Rust port of https://github.com/python/cpython/blob/master/Python/marshal.c"
license = "MIT"
repository = "https://github.com/landaire/py-marshal"
readme = "README.md"
categories = ["emulators", "encoding", "parser-implementations", "parsing"]
keywords = ["python", "marshal", "read", "decode"]

[dependencies]
bitflags = "1"
num-traits = "0.2"
num-derive = "0.3"
num-bigint = "0.4"
num-complex = "0.4"
owning_ref = { version = "0.4", optional = true }
bstr = "1.0"
thiserror = "1.0"

[features]
default = []
